<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>sh.kss.finmgr</groupId>
  <artifactId>finmgr</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.3</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>21</java.version>
    <moneta.version>1.4.4</moneta.version>
    <apache.commons.lang.version>3.16.0</apache.commons.lang.version>
    <apache.commons.io.version>2.16.1</apache.commons.io.version>
    <jakarta-validation.version>3.1.0</jakarta-validation.version>
    <surefire.version>3.4.0</surefire.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
  </properties>

  <name>finmgr</name>
  <inceptionYear>2018</inceptionYear>
  <description>A financial transaction framework</description>

  <developers>
    <developer>
      <id>ksean</id>
      <organization>Kennedy Software Solutions Inc.</organization>
      <url>https://kss.sh</url>
      <email>sean@kss.sh</email>
    </developer>
  </developers>

  <modules>
    <module>lib</module>
    <module>core</module>
    <module>web</module>
  </modules>

</project>
